--- a/src/app/components/trad-folder/trad-folder.component.html
+++ b/src/app/components/trad-folder/trad-folder.component.html
@@ -17,7 +17,7 @@
         <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="select()" *ngIf="canExpand">
           <ion-icon name="chevron-down-outline"></ion-icon> Expand
         </ion-button>
-        <ion-button slot="end" expand="block" shape="round" (click)="presentDeleteConfirm()" *ngIf="!canExpand"
+        <ion-button slot="end" expand="block" shape="round" (click)="presentDeleteConfirm()"
           color="danger">
           <ion-icon name="trash"></ion-icon>
         </ion-button>
