--- a/src/app/components/top-menu/languages-modal/languages-modal.component.html
+++ b/src/app/components/top-menu/languages-modal/languages-modal.component.html
@@ -24,7 +24,7 @@
     <ion-item>
       <ion-label position="floating">New Language</ion-label>
       <ion-input [value]="newLanguage" (ionChange)="onNewLanguageChange($event.detail.value)"></ion-input>
-      <ion-button slot="end" (click)="add()" shape="round" color="primary"><ion-icon name="add"></ion-icon></ion-button>
+      <ion-button slot="end" (click)="add()" shape="round" color="primary" [disabled]="newLanguage==''"><ion-icon name="add"></ion-icon></ion-button>
     </ion-item>
     <!--<ion-toolbar>
         <ion-item>
