--- a/src/app/components/top-menu/top-menu.component.html
+++ b/src/app/components/top-menu/top-menu.component.html
@@ -21,7 +21,6 @@
         <ion-icon size="large" slot="start" name="file-tray-full"></ion-icon>
         <ion-label>Project</ion-label>
       </ion-button>
-      
       <ion-button slot="start" (click)="presentLanguagesModal(0)">
         <ion-icon size="large" slot="start" name="globe"></ion-icon> Languages
       </ion-button>
@@ -29,12 +28,16 @@
       <ion-button slot="start" (click)="translate()">
         <ion-icon size="large" slot="start" name="language"></ion-icon> Translate
       </ion-button>
-      <ion-button (click)="download()">
+    </ion-buttons>
+    <ion-buttons>
+      <ion-button (click)="export()">
         <ion-icon size="large" slot="start" name="download"></ion-icon> Export
       </ion-button>
       <ion-button (click)="upload()">
         <ion-icon size="large" slot="start" name="share"></ion-icon> Import
       </ion-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
       <ion-button slot="end">
         <ion-icon size="large" slot="start" name="settings"></ion-icon> Settings
       </ion-button>
