--- a/src/app/components/top-menu/top-menu.component.html
+++ b/src/app/components/top-menu/top-menu.component.html
@@ -42,7 +42,7 @@
         <ion-icon size="large" slot="start" name="settings"></ion-icon> Settings
       </ion-button>
       <ion-button slot="end">
-        <ion-icon size="large" slot="start" name="information"></ion-icon> About
+        <ion-icon size="large" slot="start" name="information-circle"></ion-icon> About
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
