--- a/src/app/components/top-menu/languages-modal/languages-modal.component.html
+++ b/src/app/components/top-menu/languages-modal/languages-modal.component.html
@@ -2,7 +2,7 @@
     <ion-toolbar>
       <ion-title>Languages</ion-title>
       <ion-buttons slot="end">
-        <ion-button (click)="dismissModal()">Close</ion-button>
+        <ion-button (click)="dismissModal()"><ion-icon name="close"></ion-icon></ion-button>
       </ion-buttons>
     </ion-toolbar>
   </ion-header>
