--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <ion-split-pane when="sm" content-id="main-content" class="main-content">
     <ion-menu content-id="main-content">
       <ion-content>
-        <app-tree-view (selected)="selected($event)" (newTrad)="addTraduction($event)"></app-tree-view>
+        <app-tree-view></app-tree-view>
       </ion-content>
     </ion-menu>
 
