--- a/src/app/components/top-menu/upload-modal/upload-modal.component.html
+++ b/src/app/components/top-menu/upload-modal/upload-modal.component.html
@@ -12,23 +12,21 @@
 </ion-header>
 
 <ion-content fullscreen>
-  <ion-button expand="block" fill="clear" shape="round" (click)="downloadTemplate()">
-    <ion-icon slot="start" name="arrow-down"></ion-icon> Download a template
-  </ion-button>
-  <ngx-dropzone [accept]="'.'+type" (change)="onSelect($event)" style="height: 175px; background: rgba(0,0,0,0);">
+
+  <ngx-dropzone [accept]="'.'+type" (change)="onSelect($event)">
     <ngx-dropzone-label *ngIf="type=='json'">Drop your JSON files</ngx-dropzone-label>
     <ngx-dropzone-label *ngIf="type=='csv'">Drop your CSV file</ngx-dropzone-label>
     <ngx-dropzone-preview *ngFor="let f of files" [removable]="true" (removed)="onRemove(f)">
       <ngx-dropzone-label>{{ f.name }} ({{ f.type }})</ngx-dropzone-label>
     </ngx-dropzone-preview>
   </ngx-dropzone>
+  <ion-button expand="block" fill="clear" shape="round" (click)="downloadTemplate()">
+    <ion-icon slot="start" name="arrow-down"></ion-icon> Download a template
+  </ion-button>
 
-  <ion-text color="primary">
-    <h2 style="text-align: center;">Example</h2>
-  </ion-text>
   <ion-row *ngIf="type=='json'">
     <ion-col>
-      <ion-card >
+      <ion-card>
         <ion-card-header>
           <ion-card-subtitle>en.json</ion-card-subtitle>
         </ion-card-header>
@@ -94,6 +92,12 @@
     </ion-segment>
   </ion-toolbar>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button (click)="presentSettingsModal()" color="primary">
+        <ion-icon slot="start" name="settings"></ion-icon>
+        Settings
+      </ion-button>
+    </ion-buttons>
     <ion-buttons slot="secondary">
       <ion-button (click)="cancel()" color="medium">
         <ion-icon slot="start" name="close"></ion-icon>
