--- a/src/app/components/trad-folder/trad-folder.component.html
+++ b/src/app/components/trad-folder/trad-folder.component.html
@@ -27,7 +27,9 @@
   </ion-card-header>
 
   <ion-card-content>
-
+    
+    <app-progress-bar [percentValidation]="folder.percentValidation()" [percentFill]="folder.percentFill()"></app-progress-bar>
+    
   </ion-card-content>
 
 </ion-card>
