--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,15 +19,15 @@
               <ion-chip (click)="presentLanguagesModal()" *ngIf="index==3">...</ion-chip>
             </div>
           </ion-buttons>
-          <ion-title size="small"><app-breadcrumb [structure]="global.selectedStructure"></app-breadcrumb></ion-title>
+          <div class="breadcrumb" size="small"><app-breadcrumb [structure]="global.selectedStructure"></app-breadcrumb></div>
         </ion-item>
-        <ion-list class="no-background">
+        <ion-list class="special">
           
           <div *ngIf="!global.isSelectedStructureFolder()">
             <app-trads-group [tradGroup]="global.getSelectedStructureAsTradGroup()"></app-trads-group>
           </div>
           <div *ngIf="global.isSelectedStructureFolder()">
-            <app-trad-folder [folder]="global.getSelectedFolder()" *ngIf="global.getSelectedFolder()!=global.structure"></app-trad-folder>
+            <app-trad-folder [folder]="global.getSelectedFolder()"></app-trad-folder>
             <app-trads-group *ngFor="let t of global.selectedTradGroups$ | async" [tradGroup]="t"></app-trads-group>
             <app-trad-folder *ngFor="let f of global.selectedFolders$ | async" [folder]="f" [canExpand]="true"></app-trad-folder>
 
