more visual feedback

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,4 +19,26 @@
     overflow-x: auto;
 }
 
+/* size */
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: rgba(0,0,0,0) !important; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background:var(--ion-border-color);
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--ion-color-step-100); 
+  }
+
 
