--- a/src/app/components/trads-group/trads-group.component.html
+++ b/src/app/components/trads-group/trads-group.component.html
@@ -1,18 +1,25 @@
-<ion-card>
+<ion-card [class]="canExpand?'':'opened-file'">
   <ion-card-header>
     <ion-card-subtitle>
-      <ion-item>
+      <ion-item [class]="canExpand?'':'opened-file'">
         <ion-icon slot="start" name="document" [color]="tradGroup.isValidated()?'success':tradGroup.isFilled()?'primary':''"></ion-icon>
         <ion-icon slot="start" name="checkmark-circle-outline" color="primary" *ngIf="!tradGroup.isValidated() && tradGroup.isFilled()"></ion-icon>
         <ion-icon slot="start" name="checkmark-circle" color="success" *ngIf="tradGroup.isValidated()"></ion-icon>
         <ion-textarea slot="start" [value]="tradGroup.getName()" (ionChange)= "onNameUpdate($event.target.value)" [color]="tradGroup.isValidated()?'success':tradGroup.isFilled()?'primary':''"></ion-textarea>
+        
+        <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="select()" *ngIf="canExpand">
+          <ion-icon name="chevron-down-outline"></ion-icon> Show
+        </ion-button>
         <ion-button slot="end" expand="block" shape="round" (click)="presentDeleteConfirm()" color="danger">
           <ion-icon name="trash"></ion-icon>
         </ion-button>
       </ion-item></ion-card-subtitle>
+      <app-progress-bar [showText]="false" [percentValidation]="tradGroup.percentValidation()" [percentFill]="tradGroup.percentFill()"></app-progress-bar>
+
   </ion-card-header>
 
-  <ion-card-content>
+  <ion-card-content *ngIf="!canExpand || settings.extendTrad">
+    <app-progress-bar [showBar]="false" [percentValidation]="tradGroup.percentValidation()" [percentFill]="tradGroup.percentFill()"></app-progress-bar>
     <app-trad-field *ngFor="let trad of tradGroup.tradList" [trad]="trad"></app-trad-field>
       <ion-button (click)="presentLanguagesModal()" expand="block" fill="clear" shape="round" *ngIf="tradGroup.emptyTrad()">
         <ion-icon name="globe"></ion-icon> Add languages
