--- a/src/app/components/top-menu/settings-modal/settings-modal.component.html
+++ b/src/app/components/top-menu/settings-modal/settings-modal.component.html
@@ -18,32 +18,34 @@
   </ion-item>
 </ion-content>
 
-<ion-content fullscreen *ngIf="tab=='import'">
+<ion-content fullscreen *ngIf="tab=='import_export'">
   <ion-item>
-    <ion-label>Default import</ion-label>
-    <ion-select [value]="tabImport" okText="Okay" cancelText="Dismiss" (ionChange)="tabImportChanged($event.detail.value)">
+    <ion-label>Fusion with actual project</ion-label>
+    <ion-select [value]="importFusion" okText="Okay" cancelText="Dismiss" (ionChange)="importFusionChanged($event.detail.value)">
+      <ion-select-option value="no">No, erase actual project</ion-select-option>
+      <ion-select-option value="yes_actual">Yes, but take actual values in case of conflict</ion-select-option>
+      <ion-select-option value="yes_new">Yes, take new values in case of conflict</ion-select-option>
+    </ion-select>
+  </ion-item>
+  <ion-item>
+    <ion-label>Default file type</ion-label>
+    <ion-select [value]="tabImportExport" okText="Okay" cancelText="Dismiss" (ionChange)="tabImportExportChanged($event.detail.value)">
       <ion-select-option value="json">Json</ion-select-option>
       <ion-select-option value="csv">Csv</ion-select-option>
     </ion-select>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Folder character separator in CSV</ion-label>
+    <ion-input [value]="folderCharCsv" (ionChange)="folderCharCsvChanged($event.detail.value)"></ion-input>
   </ion-item>
 </ion-content>
 
-<ion-content fullscreen *ngIf="tab=='export'">
-  <ion-item>
-    <ion-label>Default export</ion-label>
-    <ion-select [value]="tabExport" okText="Okay" cancelText="Dismiss" (ionChange)="tabExportChanged($event.detail.value)">
-      <ion-select-option value="json">Json</ion-select-option>
-      <ion-select-option value="csv">Csv</ion-select-option>
-    </ion-select>
-  </ion-item>
-</ion-content>
 
 <ion-footer>
   <ion-toolbar>
     <ion-segment (ionChange)="tabChanged($event.detail.value)" [value]="tab">
       <ion-segment-button value="general">General</ion-segment-button>
-      <ion-segment-button value="import">Import</ion-segment-button>
-      <ion-segment-button value="export">Export</ion-segment-button>
+      <ion-segment-button value="import_export">Import and export</ion-segment-button>
     </ion-segment>
   </ion-toolbar>
   <ion-toolbar>
