--- a/src/app/components/trad-folder/trad-folder.component.html
+++ b/src/app/components/trad-folder/trad-folder.component.html
@@ -18,6 +18,9 @@
         <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="select()" *ngIf="canExpand">
           <ion-icon name="chevron-down-outline"></ion-icon> Expand
         </ion-button>
+        <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="selectParent()" *ngIf="!canExpand && !folder.isRoot()">
+          <ion-icon name="chevron-up-outline"></ion-icon>
+        </ion-button>
         <ion-button slot="end" expand="block" shape="round" (click)="presentDeleteConfirm()"
           color="danger">
           <ion-icon name="trash"></ion-icon>
