--- a/src/app/components/trads-group/trads-group.component.html
+++ b/src/app/components/trads-group/trads-group.component.html
@@ -10,6 +10,9 @@
         <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="select()" *ngIf="canExpand">
           <ion-icon name="chevron-down-outline"></ion-icon> Show
         </ion-button>
+        <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="selectParent()" *ngIf="!canExpand">
+          <ion-icon name="chevron-up-outline"></ion-icon>
+        </ion-button>
         <ion-button slot="end" expand="block" shape="round" (click)="presentDeleteConfirm()" color="danger">
           <ion-icon name="trash"></ion-icon>
         </ion-button>
