--- a/src/app/components/top-menu/top-menu.component.html
+++ b/src/app/components/top-menu/top-menu.component.html
@@ -41,7 +41,7 @@
       <ion-button slot="end" (click)="presentSettingsModal()">
         <ion-icon size="large" slot="start" name="settings"></ion-icon> <ion-label>Settings</ion-label>
       </ion-button>
-      <ion-button slot="end">
+      <ion-button slot="end" (click)="aboutModal()">
         <ion-icon size="large" slot="start" name="information-circle"></ion-icon> <ion-label>About</ion-label>
       </ion-button>
     </ion-buttons>
