--- a/src/app/components/top-menu/top-menu.component.html
+++ b/src/app/components/top-menu/top-menu.component.html
@@ -29,7 +29,7 @@
         <ion-icon size="large" slot="start" name="language"></ion-icon> <ion-label>Translate</ion-label>
       </ion-button>
     </ion-buttons>
-    <ion-buttons class="top-buttons">
+    <ion-buttons class="top-buttons export">
       <ion-button (click)="export()">
         <ion-icon size="large" slot="start" name="download"></ion-icon> <ion-label>Export</ion-label>
       </ion-button>
