--- a/src/app/components/top-menu/menu-popover/template-popover.component.html
+++ b/src/app/components/top-menu/menu-popover/template-popover.component.html
@@ -2,13 +2,13 @@
 
 <ion-list *ngIf="id==0">
 
-  <ion-item button lines="none"  (click)="new()">
+  <ion-item button  (click)="new()">
             
     New <ion-note slot="end">Ctrl+N</ion-note><ion-icon name="add-circle" slot="end"></ion-icon>
  </ion-item>
- <ion-item button (click)="close()">
+ <!--<ion-item button (click)="close()">
    Close <ion-note slot="end">Ctrl+?</ion-note><ion-icon name="close-circle" slot="end"></ion-icon>
-   </ion-item>
+   </ion-item>-->
         
     <ion-item button lines="none"  (click)="load.click()">
             
